# solana-anchor-silly-game

./: Anchor.toml  README.md  package.json
programs/tokens-test/: Cargo.toml
programs/tokens-test/src/: errors.rs  lib.rs
programs/tokens-test/src/instructions/: create_game.rs  initialize.rs  mod.rs  play_game.rs
programs/tokens-test/src/state/: game.rs
tests/: tokens-test.ts
