[package]
name = "tokens-test"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokens_test"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = [ "init-if-needed" ] }
anchor-spl = { version = "0.26.0" }
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
